--- a/application/build.gradle
+++ b/application/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.5.1'
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation 'io.vavr:vavr:0.10.4'
 
 }
 
